# Ejemplos-en-C-y-C-

Atchivo_ecuaciones/: archivo.txt  main.cpp
ClasesConCplusplus/: CMakeLists.txt  main.cpp
Herencia_doble/: main.cpp
Herencia_pro/: main.cpp
Persona/: CMakeLists.txt  main.cpp
Persona2/: main.cpp
Polimorfismo/: main.cpp
Prisma/: CMakeLists.txt  CMakeLists.txt.autosave  prisma.cpp  prisma.h
Probar/: main.cpp
Rectangulo/: CMakeLists.txt  main.cpp  prisma.cpp  prisma.h  rectangulo.h
SobrecargaConstructores/: CMakeLists.txt  main.cpp
Validador_contrasenia/: main.cpp
build-Atchivo_ecuaciones-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-ClasesConCplusplus-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Herencia-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Herencia2-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Herencia_doble-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-Herencia_pro-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-Persona-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Persona-Replacement_for_Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: CMakeCache.txt  qtcsettings.cmake
(+72 files in other folders)
